--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-custom-scrollbars",
+  "name": "@rastopyr/react-custom-scrollbars",
   "version": "4.2.1",
   "description": "React scrollbars component",
   "main": "lib/index.js",
